@@ -35,7 +35,7 @@ public final class Output {
 		PerformanceListener perfListener = new PerformanceListener(args);
 		cf.addProgressListener(perfListener);
 		
-		Results results = cf.createRepresentations(args.getInput());
+		Results results = cf.createRepresentations(args.getInput(), null);
 		
 		Camera camera = null;
 		Projection projection = null;
